<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/no_result_image"
            android:layout_width="@dimen/empty_screen_image_width"
            android:layout_height="@dimen/empty_screen_image_height"
            android:layout_gravity="center"
            android:src="@drawable/google_search_image" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/web_search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/recycler_view_bg"
            android:paddingBottom="@dimen/activity_vertical_margin" />

    </FrameLayout>

    <include layout="@layout/page_change_layout" />

</RelativeLayout>